<resources>
  <string name="app_name">JetpackSecurityOverview</string>
  <string name="shared_prefs_label">Enter a password that is going to be saved in Encrypted shared prefs:</string>
  <string name="save">Save</string>
  <string name="files_label">Enter a password that is going to be saved in Encrypted file:</string>
  <string name="hidden_password">*****************</string>
  <string name="show_password">Show password</string>
  <string name="hide_password">Hide password</string>
  <string name="shared_prefs_password_label">Password stored in Encrypted Shared Preferences:</string>
  <string name="files_password_label">Password stored in Encrypted File:</string>
  <string name="delete_shared_preferences_password_content_description">Delete Shared preferences password</string>
  <string name="delete_file_password_content_description">Delete file password</string>
  <string name="password_saved">Password saved successfully!</string>
  <string name="input_invalid">Your input is invalid, please try again!</string>
  <string name="password_not_set">Password is not set!</string>
  <string name="password_deleted">Password deleted successfully!</string>
</resources>